// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/widgets/admin_console/AdminPanelTogglable should match snapshot 1`] = `
<div>
  <section
    aria-labelledby="_r_0_"
    class="_admin-panel_iwm08_2 AdminPanel clearfix AdminPanelTogglable test-class-name"
    id="test-id"
  >
    <header
      class="_admin-panel-header_19tix_2 _admin-panel-header--divided_19tix_7"
    >
      <div
        class="_admin-panel-header__main_19tix_10"
      >
        <div
          class="_admin-panel-header__start_19tix_19"
        >
          <div
            class="_admin-panel-header__title-stack_19tix_37"
          >
            <div
              class="_admin-panel-header__title-row_19tix_46"
            >
              <h2
                class="_admin-panel-header__title_19tix_37"
                id="_r_0_"
              >
                test-title-default
              </h2>
            </div>
            <p
              class="_admin-panel-header__subtitle_19tix_66"
            >
              test-subtitle-default
            </p>
          </div>
        </div>
        <div
          class="_admin-panel-header__actions_19tix_75"
        >
          <button
            aria-expanded="true"
            aria-label="Collapse section"
            class="_icon-button_g2m23_2 _icon-button--size-medium_g2m23_83"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-20_1i355_46"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </header>
    <div
      aria-hidden="false"
      class="_admin-panel__collapse_iwm08_13 _admin-panel__collapse--expanded_iwm08_18"
    >
      <div
        class="_admin-panel__collapse-inner_iwm08_21"
      >
        <div
          class="_admin-panel__body_iwm08_25"
        >
          Test
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`components/widgets/admin_console/AdminPanelTogglable should match snapshot closed 1`] = `
<div>
  <section
    aria-labelledby="_r_1_"
    class="_admin-panel_iwm08_2 AdminPanel clearfix AdminPanelTogglable test-class-name closed"
    id="test-id"
  >
    <header
      class="_admin-panel-header_19tix_2"
    >
      <div
        class="_admin-panel-header__main_19tix_10"
      >
        <div
          class="_admin-panel-header__start_19tix_19"
        >
          <div
            class="_admin-panel-header__title-stack_19tix_37"
          >
            <div
              class="_admin-panel-header__title-row_19tix_46"
            >
              <h2
                class="_admin-panel-header__title_19tix_37"
                id="_r_1_"
              >
                test-title-default
              </h2>
            </div>
            <p
              class="_admin-panel-header__subtitle_19tix_66"
            >
              test-subtitle-default
            </p>
          </div>
        </div>
        <div
          class="_admin-panel-header__actions_19tix_75"
        >
          <button
            aria-expanded="false"
            aria-label="Expand section"
            class="_icon-button_g2m23_2 _icon-button--size-medium_g2m23_83"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_g2m23_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-20_1i355_46"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </header>
    <div
      aria-hidden="true"
      class="_admin-panel__collapse_iwm08_13"
    >
      <div
        class="_admin-panel__collapse-inner_iwm08_21"
      >
        <div
          class="_admin-panel__body_iwm08_25"
        >
          Test
        </div>
      </div>
    </div>
  </section>
</div>
`;
